--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <div><a onClick="reset();">Reset</a></div>
    
    <div class="console">
-    <div>Time lapse: <span  id="time-lapse"> 0</span></div>
+    <div>Time lapse: <span  id="time-lapse"> 0</span> &nbsp; buyBackPriceTimer: <span  id="timer1"> 0</span></div>
     </div>
     
     
